RESOLVED FIXED 112017
[EFL] accessibility/textbox-role-reports-selection.html is failing
https://bugs.webkit.org/show_bug.cgi?id=112017
Summary [EFL] accessibility/textbox-role-reports-selection.html is failing
Krzysztof Czech
Reported 2013-03-11 08:15:03 PDT
accessibility/textbox-role-reports-selection.html is failing on all EFL platforms.
Attachments
Proposed patch (4.09 KB, patch)
2013-10-30 01:27 PDT, Rob Płóciennik
mario: review+
Updated patch (4.09 KB, patch)
2013-10-30 08:22 PDT, Rob Płóciennik
commit-queue: commit-queue-
Rebased patch (4.03 KB, patch)
2013-10-31 00:50 PDT, Rob Płóciennik
no flags
Rob Płóciennik
Comment 1 2013-10-30 01:27:17 PDT
Created attachment 215480 [details] Proposed patch
Mario Sanchez Prada
Comment 2 2013-10-30 05:00:42 PDT
Comment on attachment 215480 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=215480&action=review Lgtm, but it would be good if you could address those style things first > LayoutTests/ChangeLog:7 > + Small description here? > Source/WebCore/ChangeLog:11 > + No new tests, covered by existing ones. > + > + getSelectionOffsetsForObject() now returns proper start/end offsets for > + selections "touching" the object's front border. You probably want to swap the order of these two paragraphs
Rob Płóciennik
Comment 3 2013-10-30 08:22:09 PDT
Created attachment 215504 [details] Updated patch Updated accordingly.
WebKit Commit Bot
Comment 4 2013-10-30 09:05:51 PDT
Comment on attachment 215504 [details] Updated patch Rejecting attachment 215504 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 215504, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: 51759bb512dd26d3a33b45bb3150e088a78 r158269 = 73d7044720a6f151ca09d9a163927f26af28a858 r158270 = 2ff8909f3a50ccf4628fa796cc700416611f040c r158271 = 69b2545e8b2b2f8c4b9b5c7b11f931642ae78ca1 r158272 = 38466816b3824f830f62f68150d3fde7a55601ca r158273 = 5d27aad1be1bad5a03a513014fa5e0534b5d2e0d Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output: http://webkit-queues.appspot.com/results/17038226
Rob Płóciennik
Comment 5 2013-10-31 00:50:04 PDT
Created attachment 215627 [details] Rebased patch
WebKit Commit Bot
Comment 6 2013-10-31 01:36:41 PDT
Comment on attachment 215627 [details] Rebased patch Clearing flags on attachment: 215627 Committed r158352: <http://trac.webkit.org/changeset/158352>
WebKit Commit Bot
Comment 7 2013-10-31 01:36:44 PDT
All reviewed patches have been landed. Closing bug.
Mario Sanchez Prada
Comment 8 2013-11-01 04:42:53 PDT
*** Bug 67713 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.