[EFL] accessibility/textbox-role-reports-selection.html is failing https://bugs.webkit.org/show_bug.cgi?id=112017

Patch by Robert Plociennik <r.plociennik@samsung.com> on 2013-10-31
Reviewed by Mario Sanchez Prada.

Source/WebCore:

getSelectionOffsetsForObject() now returns proper start/end offsets for
selections "touching" the object's front border.

No new tests, covered by existing ones.

* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(getSelectionOffsetsForObject):

LayoutTests:

Removed failure expectations.

* platform/efl-wk1/TestExpectations: The test is no longer failing.
* platform/efl-wk2/TestExpectations: The test is no longer failing.

Canonical link: https://commits.webkit.org/141719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158352 268f45cc-cd09-0410-ab3c-d52691b4dbfc